<resources>
    <string name="app_name">1CR18IS133_CALCAPP</string>
    <string name="ac">AC</string>
    <string name="del">⌫</string>
    <string name="mod">%</string>
    <string name="division">÷</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="mul">×</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="sub">-</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="plus">+</string>
    <string name="btn_eql">=</string>
    <string name="btn_dot">.</string>
    <string name="btn_0">0</string>
    <string name="btn_inv">±</string>
</resources>